Fix date spacing

--- a/themes/SimpleTheme/static/css/main.css
+++ b/themes/SimpleTheme/static/css/main.css
@@ -84,6 +84,7 @@ section p {
 .footer {
 	font-size: 10px;
 	text-align: right;
+	margin-right: 0.5em;
 }
 
 @media (min-width: 800px) {
